fixed body color not showing up properly because of it's an RGB val.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,7 +37,7 @@ body {
   padding: 0;
   text-align: left;
   /* background: linear-gradient(var(--gray-gradient)) no-repeat; */
-  background: var(--black);
+  background: rgb(var(--black));
   background-size: 100% 600px;
   word-wrap: break-word;
   overflow-wrap: break-word;
